Adjust for war deploy

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=empresa
-spring.datasource.username=sa
+spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
